...
        <variable
            name="content"
            type="com.jerry.mvvm.model.remote.Content" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/padding_medium">

        <ImageView
...
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
            tools:text="123458" />

        <ImageView
            android:id="@+id/favouriteImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
...
