<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/viewholder_content"
            tools:itemCount="5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/eBtnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:text="@string/refresh"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginRight="50dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>